--- a/html/style/sass/home/_homeViewUser.scss
+++ b/html/style/sass/home/_homeViewUser.scss
@@ -5,69 +5,74 @@
     padding: 25px;
 }
 
-.gallery{
-    display:grid;
-    grid-template-columns: repeat(6,1fr);
-    grid-auto-rows:100px 300px;
-    grid-gap:10px;
+.container {
+
+    display: grid;
+    grid-template-columns :repeat(12, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;
     grid-auto-flow: dense;
+}
+
+.container a {
     text-align: center;
-    .gallery-item{
-        @for $i from 1 through 22{
-            &:nth-child(#{$i}){
-                grid-column: span (random(2) + 1);
-            }
+    background-color: burlywood;
+    overflow: hidden;
+    position: relative;
+    cursor:pointer;
+
+    img{
+        width:100%;
+        height:100%;
+        object-fit: cover;
+        object-position:50% 50%;
+        transition:.5s ease-in-out;
+    }
+
+    &:hover {
+        img {
+            transform:scale(1.5);
         }
-    
-        @for $i from 1 through 22{
-            &:nth-child(#{$i}){
-                grid-row: span random(3);
-            }
+
+        span{
+            display: flex;
         }
+    }
 
-        .gallery-content{
-            width:100%;
-            height:100%;
-            position:relative;
+    span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        backdrop-filter: blur(5px);
+        color: $color-contrastWhite;
+        background-color: rgba(0,0,0,0.5);
+    }
+}
 
-            .image{
-                width:100%;
-                height:100%;
-                overflow:hidden;
 
-                img{
-                    width:100%;
-                    height:100%;
-                    object-fit: cover;
-                    object-position:50% 50%;
-                    cursor:pointer;
-                    transition:.5s ease-in-out;
 
-                    &:hover{
-                        transform:scale(1.5);
-                    }
-                }
-            }
+@for $i from 1 through 22 {
+    .container a:nth-child(#{$i}){
+        grid-column: span (random(3));
+        border: 1px solid red;
+        grid-row: span (random(3));
+    }
+}
 
-            .text{
-                width: 100%;
-                height: 100%;
-                opacity:0;
-                position:absolute;
-                top:50%;
-                left:50%;
-                transform:translate(-50%,-50%);
-                color: $color-contrastWhite;
-                font-size:24px;
-                pointer-events:none;
-                z-index:4;
+@media screen and (max-width: 1000px)  {
+    .container {
+        grid-template-columns :repeat(1, 1fr);
+        grid-auto-rows: 150px;
+    }
 
-                &:hover{
-                    opacity:1;
-                    width:100%;
-                }
-            }
-        }
+    .container a{
+        grid-column: span 1 !important;
+        border: 1px solid red;
     }
 }
 
@@ -75,22 +80,91 @@
 
 
 
-@media screen and (max-width:1000px){
-    .gallery{
-        grid-template-columns: repeat(1,1fr);
-    }
 
-    .gallery-item{
-        @for $i from 1 through 22{
-            &:nth-child(#{$i}){
-                grid-column: span 1;
-            }
-        }
-    }
-}
 
-@media screen and (min-width: 1180px){
-    #home{
-        padding: 45px;
-    }
-}
+
+
+
+        // .gallery{
+        //     display:grid;
+        //     grid-template-columns: repeat(6,1fr);
+        //     grid-auto-rows:100px 300px;
+        //     grid-gap:10px;
+        //     grid-auto-flow: dense;
+        //     text-align: center;
+        //     .gallery-item{
+        //         @for $i from 1 through 22{
+        //             &:nth-child(#{$i}){
+        //                 grid-column: span (random(2) + 1);
+        //             }
+        //         }
+            
+        //         @for $i from 1 through 22{
+        //             &:nth-child(#{$i}){
+        //                 grid-row: span random(3);
+        //             }
+        //         }
+        
+        //         .gallery-content{
+        //             width:100%;
+        //             height:100%;
+        //             position:relative;
+        
+        //             .image{
+        //                 width:100%;
+        //                 height:100%;
+        //                 overflow:hidden;
+        
+        //                 img{
+        //                     width:100%;
+        //                     height:100%;
+        //                     object-fit: cover;
+        //                     object-position:50% 50%;
+        //                     cursor:pointer;
+        //                     transition:.5s ease-in-out;
+        
+        //                     &:hover{
+        //                         transform:scale(1.5);
+        //                     }
+        //                 }
+        //             }
+        
+        //             .text{
+        //                 width: 100%;
+        //                 height: 100%;
+        //                 opacity:0;
+        //                 position:absolute;
+        //                 top:50%;
+        //                 left:50%;
+        //                 transform:translate(-50%,-50%);
+        //                 color: $color-contrastWhite;
+        //                 font-size:24px;
+        //                 pointer-events:none;
+        //                 z-index:4;
+        
+        //                 &:hover{
+        //                     opacity:1;
+        //                     width:100%;
+        //                 }
+        //             }
+        //         }
+        //     }
+        // }
+        
+        
+        
+        
+        
+        // @media screen and (max-width:1000px){
+        //     .gallery{
+        //         grid-template-columns: repeat(1,1fr);
+        //     }
+        
+        //     .gallery-item{
+        //         @for $i from 1 through 22{
+        //             &:nth-child(#{$i}){
+        //                 grid-column: span 1;
+        //             }
+        //         }
+        //     }
+        // }
