--- a/html/style/css/main.css
+++ b/html/style/css/main.css
@@ -921,7 +921,22 @@ article #CreateGalery form .modal.active .card .body .footer button[dataModal=an
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 75px 0px;
+  gap: 30px 0px;
+}
+#picture a {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  background-color: #0B162C;
+  color: #F4F4F4;
 }
 
 #picture-header {
