--- a/html/style/sass/image/_imageView.scss
+++ b/html/style/sass/image/_imageView.scss
@@ -3,7 +3,11 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    gap: 75px 0px;
+    gap: 30px 0px;
+
+    a {
+        @include buttonPrimary(100%);
+    }
 }
 
 #picture-header{
