--- a/html/style/sass/home/_homeViewUser.scss
+++ b/html/style/sass/home/_homeViewUser.scss
@@ -12,22 +12,28 @@
         grid-auto-flow: dense;
         
         .gallery-item{
+            border-radius: 4px;
+            overflow: hidden;
+            
             @for $i from 1 through 22{
                 &:nth-child(#{$i}){
-                    grid-column: span (random(2) + 1);
+                    grid-column: span (random(2));
                 }
             }
         
             @for $i from 1 through 22{
                 &:nth-child(#{$i}){
-                    grid-row: span random(3);
+                    grid-row: span random(2);
                 }
             }
+
     
             .gallery-content{
                 width:100%;
                 height:100%;
                 position:relative;
+                
+
     
                 .image{
                     width:100%;
