--- a/html/style/sass/authentication/_loginView.scss
+++ b/html/style/sass/authentication/_loginView.scss
@@ -1,20 +1,27 @@
-.login>*{
-    display: block;
-    width: 100%;
-    box-sizing: border-box;
-    margin: 10px 0 20px 0;
-}
+#login{
+    margin: auto;
+    padding: 0px 20px;
+    max-width: 600px;
 
-.login h2 {
-    margin-top: 4em;
-    text-align: center;
-}
-
-#connexion {
-    @include buttonPrimary(100%);
-}
-
-.login a {
-    @include buttonInput(100%);
+    .login>*{
+        display: block;
+        width: 100%;
+        box-sizing: border-box;
+        margin: 10px 0 20px 0;
+    }
+    
+    .login h1 {
+        margin-top: 2em;
+        text-align: center;
+    }
+    
+    #connexion {
+        margin-bottom: 10px;
+        @include buttonPrimary(100%);
+    }
+    
+    .login a {
+        @include buttonInput(100%);
+    }
 }
 
