--- a/html/style/sass/gallery/_galleryViewUser.scss
+++ b/html/style/sass/gallery/_galleryViewUser.scss
@@ -1,76 +1,116 @@
+#view-gallery{
+    display: flex;
+    flex-direction: column;
+    gap: 25px 0px;
+    padding: 25px;
 
-.container {
+    .gallery{
+        display:grid;
+        grid-template-columns: repeat(6,1fr);
+        grid-auto-rows:100px 300px;
+        grid-gap:10px;
+        grid-auto-flow: dense;
+        
+        .gallery-item{
+            @for $i from 1 through 22{
+                &:nth-child(#{$i}){
+                    grid-column: span random(2);
+                }
+            }
+        
+            @for $i from 1 through 22{
+                &:nth-child(#{$i}){
+                    grid-row: span random(2);
+                }
+            }
+    
+            .gallery-content{
+                width:100%;
+                height:100%;
+                position:relative;
+    
+                .image{
+                    width:100%;
+                    height:100%;
+                    overflow:hidden;
+    
+                    img{
+                        width:100%;
+                        height:100%;
+                        object-fit: cover;
+                        object-position:50% 50%;
+                        cursor:pointer;
+                        transition:.5s ease-in-out;
+    
+                        &:hover{
+                            transform:scale(1.25);
+                        }
+                    }
+                }
+    
+                .text{
+                    display: none;
+                    position:absolute;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    top:0;
+                    left:0;
+                    color: $color-contrastWhite;
+                    font-size:24px;
+                    backdrop-filter: blur(5px);
+                    background-color: rgba(0,0,0,0.5);
+                    pointer-events:none;
+                    z-index:500;
+                }
 
-    display: grid;
-    grid-template-columns :repeat(12, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    grid-gap: 10px;
-    grid-auto-flow: dense;
+                &:hover .text{
+                    display: flex;
+                }
+            }
+        }
+    }
+    
+    @media screen and (max-width:1000px){
+        .gallery{
+            grid-template-columns: repeat(1,1fr);
+        }
+    
+        .gallery-item{
+            @for $i from 1 through 22{
+                &:nth-child(#{$i}){
+                    grid-column: span 1 !important;
+                }
+            }
+        }
+
+        .info {
+            flex-direction: column;
+        }
+    
+        .info p{
+            flex-basis: 100%;
+            margin: 1em;
+            flex-wrap: wrap;
+        }
+    }
+
 }
 
-.container a {
-    text-align: center;
-    background-color: burlywood;
-}
-
-
-@for $i from 1 through 22 {
-    .container a:nth-child(#{$i}){
-        grid-column: span (random(3));
-        border: 1px solid red;
-        grid-row: span (random(3));
+@media screen and (min-width:1180px){
+    #view-gallery{
+        padding: 45px;
     }
 }
 
-.container a img {
-    height: 100%;
-    width: 100%;
-    $object-fit: cover;
-    position: relative;
-}
 
 .info{
     display: flex;
-    margin: 1em;
+    margin: 15px;
     justify-content: space-around;
 }
 
-.info-comp {
-    display: flex;
-    margin: 1em;
+#edit-galery-btn{
+    @include buttonPrimary(175px)
 }
-
-.info-comp p:first-of-type{
-    flex-basis: 25%;
-}
-
-.info-comp div {
-    flex-basis: 50%;
-}
-
-@media screen and (max-width: 1000px)  {
-    .container {
-        grid-template-columns :repeat(1, 1fr);
-        grid-auto-rows: 150px;
-    }
-
-    .container a{
-        grid-column: span 1 !important;
-        border: 1px solid red;
-    }
-
-    .info {
-        flex-direction: column;
-
-    }
-
-    .info p{
-        flex-basis: 100%;
-        border: 1px solid red;
-        margin: 1em;
-        flex-wrap: wrap;
-    }
-}
-
-
-
