--- a/html/style/sass/image/_imageView.scss
+++ b/html/style/sass/image/_imageView.scss
@@ -21,6 +21,7 @@
         max-width: 100%;
         height: auto;
         border-radius: 4px;
+        align-self: flex-start;
     }
 
     #picture-infos{
